<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ge.geolab.bookswap.activities.AddBookActivity"
    tools:showIn="@layout/activity_add_book">
       <TableLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:shrinkColumns="1"
           android:stretchColumns="1">
           <TableRow>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/type_of_ad"
                   style="@style/add_book_text"/>
               <Spinner
                   android:id="@+id/ad_type"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/add_layout_second_column_left_margin"/>
           </TableRow>
           <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            style="@style/add_book_text"/>
        <EditText
            android:id="@+id/input_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/add_layout_second_column_left_margin"
            style="@style/add_book_input"
            />
           </TableRow>
       <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            style="@style/add_book_text"/>
        <EditText
            android:id="@+id/input_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/add_layout_second_column_left_margin"
            style="@style/add_book_input"
            />
        </TableRow>
           <TableRow>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/category"
                   style="@style/add_book_text"/>
               <Spinner
                   android:id="@+id/category_spinner"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/add_layout_second_column_left_margin"/>
           </TableRow>
           <TableRow>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:text="@string/condition"
                   style="@style/add_book_text"/>
               <Spinner
                   android:id="@+id/book_condition_spinner"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_marginStart="@dimen/add_layout_second_column_left_margin"
                   />
           </TableRow>
           <TableRow>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/location"
                   style="@style/add_book_text"/>
               <EditText
                   android:id="@+id/input_location"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/add_layout_second_column_left_margin"
                   style="@style/add_book_input"
                   />
           </TableRow>
           <TableRow>
               <TextView
                   android:id="@+id/exchange_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/exchange_in_what"
                   style="@style/add_book_text"/>
               <EditText
                   android:id="@+id/input_exchange_in"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/add_layout_second_column_left_margin"
                   style="@style/add_book_input"
                   />
           </TableRow>
           <TextView
               android:layout_height="wrap_content"
               android:text="@string/contact_information"
               android:textStyle="bold"
               android:layout_marginTop="10dp"
               style="@style/add_book_text"/>
           <TableRow>
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:src="@drawable/email"/>
               <EditText
                   android:id="@+id/input_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/add_layout_second_column_left_margin"
                   android:inputType="textEmailAddress"
                   style="@style/add_book_text"
                   />
           </TableRow>
           <TableRow>
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:src="@drawable/ic_call"/>
               <EditText
                   android:id="@+id/input_mobile_number"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="numberSigned"
                   android:layout_marginStart="@dimen/add_layout_second_column_left_margin"
                   style="@style/add_book_text"
                   />
           </TableRow>
       </TableLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_pen"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/short_description"
        android:textStyle="bold"
        style="@style/add_book_text"/>
    </LinearLayout>
    <EditText
        android:id="@+id/input_book_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        style="@style/add_book_text"
        />
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="submit"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/pic_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       />
    </HorizontalScrollView>
</LinearLayout>
