<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ge.geolab.bookswap.activities.DetailsActivity"
    tools:showIn="@layout/activity_details">
    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_slider_height"
        />
    <com.daimajia.slider.library.Indicators.PagerIndicator
        android:id="@+id/custom_indicator"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/slider"
        style="@style/AndroidImageSlider_Magnifier_Oval_Black"
        />
    <android.support.v7.widget.CardView
        android:id="@+id/content_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_indicator"
        android:layout_marginTop="@dimen/details_cardview_margin_top">


        <TableLayout
            android:id="@+id/content_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="1"
            android:stretchColumns="1">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                style="@style/book_title_style"
                />
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:text="@string/author"
                    style="@style/add_book_text"/>
                <TextView
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:layout_marginTop="@dimen/details_view_margin_top"
                    android:text="@string/blank"
                    style="@style/add_book_text"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:text="@string/category"
                    style="@style/add_book_text"/>
                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:layout_marginTop="@dimen/details_view_margin_top"
                    android:singleLine="true"
                    android:ellipsize="end"
                    style="@style/add_book_text"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:text="@string/condition"
                    style="@style/add_book_text"/>
                <TextView
                    android:id="@+id/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:layout_marginTop="@dimen/details_view_margin_top"
                    style="@style/add_book_text"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:text="@string/location"
                    style="@style/add_book_text"/>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:layout_marginTop="@dimen/details_view_margin_top"
                    android:text="@string/blank"
                    style="@style/add_book_text"/>
            </TableRow>
            <TableRow
                android:id="@+id/exchange_row">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:text="@string/exchange"
                    style="@style/add_book_text"/>
                <TextView
                    android:id="@+id/exchange_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/details_view_margin_top"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    style="@style/add_book_text"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:text="@string/type_of_ad"
                    style="@style/add_book_text"/>
                <TextView
                    android:id="@+id/ad_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    style="@style/add_book_text"/>
            </TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/contact_information"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/details_view_margin_top"
                android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                style="@style/contact_information_title_text" />
            <TableRow>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_view_margin_top"
                    android:src="@drawable/email"/>
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/blank"
                    style="@style/add_book_text"
                    android:autoLink="email"
                    />
            </TableRow>
            <TableRow>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_view_margin_top"
                    android:src="@drawable/ic_call"/>
                <TextView
                    android:id="@+id/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/blank"
                    style="@style/add_book_text"
                    android:autoLink="phone"
                    />
            </TableRow>
            <View android:background="@color/divider"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/details_view_margin_top"/>

            <LinearLayout
                android:id="@+id/description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/details_view_margin_top"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                    android:layout_weight=".8"
                    android:layout_gravity="center"
                    android:text="@string/details_of_book"
                    android:textStyle="bold"
                    style="@style/contact_information_title_text"/>
                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:src="@drawable/ic_navigate_next"/>
            </LinearLayout>
            <ge.geolab.bookswap.views.customViews.ExpandableTextView
                android:id="@+id/description_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:text="@string/description_not_found"/>
        </TableLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/about_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_card"
        android:layout_marginTop="@dimen/details_cardview_margin_top"
        android:layout_marginBottom="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="@dimen/profile_pic_width"
            android:layout_height="@dimen/profile_pic_width"
            android:layout_marginTop="@dimen/details_view_margin_top"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_view_margin_top"
            android:layout_marginBottom="@dimen/details_view_margin_top"
            android:layout_gravity="center_horizontal"
            style="@style/username_text"/>
            <TextView
                android:id="@+id/suggestions_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_view_margin_top"
                android:layout_gravity="center_horizontal"
                style="@style/username_text"
                android:text="@string/other_books"
                />
            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/IndicatorView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                android:layout_marginRight="@dimen/add_layout_second_column_left_margin"
                android:layout_marginTop="@dimen/details_view_margin_top"
                android:layout_marginBottom="@dimen/details_view_margin_top"
                app:indicator="BallScaleMultiple"
                app:indicator_color="@color/colorAccent" />
            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/suggestions_slider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_slider_height"
                android:layout_marginLeft="@dimen/add_layout_second_column_left_margin"
                android:layout_marginRight="@dimen/add_layout_second_column_left_margin"
                android:layout_marginTop="@dimen/details_view_margin_top"
                android:layout_marginBottom="@dimen/details_view_margin_top"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
